--- a/src/layouts/Footer/Footer.scss
+++ b/src/layouts/Footer/Footer.scss
@@ -5,6 +5,18 @@
         position: absolute;
         width: 100vw;
     }
+    div .contact_info_area .contact_info {
+        position: absolute;
+        width: 100vw;
+        color: #000;
+        margin-top: 10px;
+        margin-left: -500px;
+    }
+    div .footer-content-area.demo{
+        margin-top: 165px;
+        height: 610px;
+        color: #000;
+    }
 }
 
 .footer-area {
