--- a/src/layouts/Footer/Footer.scss
+++ b/src/layouts/Footer/Footer.scss
@@ -2,7 +2,7 @@
 
 @media only screen and (max-width: 800px) {
     div .footer-area {
-        position: absolute;
+        position: relative;
         width: 100vw;
     }
     div .contact_info_area .contact_info {
