--- a/src/assets/css/General.css
+++ b/src/assets/css/General.css
@@ -61,6 +61,18 @@ body {
     background: -webkit-linear-gradient(left, #0b5931, #061e1e);
     background: linear-gradient(to right, #0b5931, #061e1e); */
 }
+
+@media only screen and (max-width: 800px){
+    #chiknImage {
+        align-items: center !important;
+        max-width: 100vw !important;
+        display: block;
+        margin-left: auto !important;
+        margin-right: auto;
+    }
+}
+
+
 @media only screen and (max-width: 800px) {
     html,body {
         overflow-x: hidden;
